--- a/templates/var/lib/tftpboot/preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/preseed.cfg.j2
@@ -87,11 +87,11 @@ d-i passwd/user-fullname string {{ item.user }}
 {%       endif %}
 d-i passwd/username string {{ item.user }}
 {%       if tftp_preseed_users_encrypted_pw is defined and not tftp_preseed_users_encrypted_pw %}
-d-i passwd/user-password password {{ item.password }}
-d-i passwd/user-password-again password {{ item.password }}
+d-i passwd/user-password password {{ item.pass }}
+d-i passwd/user-password-again password {{ item.pass }}
 {%       endif %}
 {%       if tftp_preseed_users_encrypted_pw is defined and tftp_preseed_users_encrypted_pw %}
-d-i passwd/user-password-crypted password {{ item.password }}
+d-i passwd/user-password-crypted password {{ item.pass }}
 {%       endif %}
 {%     endfor %}
 d-i user-setup/allow-password-weak boolean true
