--- a/templates/var/lib/tftpboot/preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/preseed.cfg.j2
@@ -46,8 +46,9 @@ d-i clock-setup/ntp boolean true
 
 ### Partitioning
 d-i partman-auto/disk string {{ pre_seed_partion_disk }}
+d-i partman-auto/method string {{ pre_seed_partitioning_method }}
+
 {% if pre_seed_partitioning_method == "lvm" %}
-d-i partman-auto/method string lvm
 d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-md/device_remove_md boolean true
 d-i partman-lvm/confirm boolean false
