--- a/templates/var/lib/tftpboot/preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/preseed.cfg.j2
@@ -45,7 +45,7 @@ d-i time/zone string US/Eastern
 d-i clock-setup/ntp boolean true
 
 ### Partitioning
-d-i partman-auto/disk string {{ pre_seed_partion_disk }}
+d-i partman-auto/disk string {{ pre_seed_partition_disk }}
 d-i partman-auto/method string {{ pre_seed_partitioning_method }}
 
 {% if pre_seed_partitioning_method == "lvm" %}
