--- a/templates/var/lib/tftpboot/preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/preseed.cfg.j2
@@ -23,9 +23,16 @@ d-i netcfg/wireless_wep string
 
 ### Mirror settings
 # If you select ftp, the mirror/country string does not need to be set.
+{% if enable_apt_mirror is defined and enable_apt_mirror %}
+d-i mirror/country string manual
+d-i mirror/http/hostname string {{ apt_mirror_server }}
+d-i mirror/http/directory string {{ apt_mirror_dir }}
+{% (elif enable_apt_mirror is defined and not enable_apt_mirror) or enable_apt_mirror is not defined %}
 d-i mirror/country string manual
 d-i mirror/http/hostname string archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
+{% endif %}
+
 {% if (enable_apt_caching is defined and enable_apt_caching) and apt_cacher_server is defined %}
 {%   if pri_domain_name is defined %}
 d-i mirror/http/proxy string http://{{ apt_cacher_server }}.{{ pri_domain_name }}:{{ apt_cacher_ng_port|default(3142) }}
