--- a/templates/var/lib/tftpboot/preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/preseed.cfg.j2
@@ -27,7 +27,7 @@ d-i netcfg/wireless_wep string
 d-i mirror/country string manual
 d-i mirror/http/hostname string {{ apt_mirror_server }}
 d-i mirror/http/directory string {{ apt_mirror_dir }}
-{% (elif enable_apt_mirror is defined and not enable_apt_mirror) or enable_apt_mirror is not defined %}
+{% elif (enable_apt_mirror is defined and not enable_apt_mirror) or enable_apt_mirror is not defined %}
 d-i mirror/country string manual
 d-i mirror/http/hostname string archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
