Added boot from HD to vars
Need to be able to define a different menu default

Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/templates/var/lib/tftpboot/ubuntu-installer/amd64/boot-screens/txt.cfg.j2
+++ b/templates/var/lib/tftpboot/ubuntu-installer/amd64/boot-screens/txt.cfg.j2
@@ -1,13 +1,18 @@
-# {{ ansible_managed }}
-default local
-label local
-  menu label ^Boot from hard drive
-  menu default
-  localboot 0
+# Managed By Ansible
+
 {% if tftp_boot_menu is defined %}
 {%   for item in tftp_boot_menu %}
+{%     if item.menu_default is defined and item.menu_default %}
+default {{ item.label }}
+{%     endif %}
 label {{ item.label }}
   menu label ^{{ item.menu_label }}
+{%     if item.menu_default is defined and item.menu_default %}
+  menu_default
+{%     endif %}
+{%     if item.localboot is defined and item.localboot %}
+  localboot 0
+{%     endif %}
 {%     if item.kernel is defined %}
   kernel {{ item.kernel }}
 {%     endif %}
