Fixed menu default
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/templates/var/lib/tftpboot/ubuntu-installer/amd64/boot-screens/txt.cfg.j2
+++ b/templates/var/lib/tftpboot/ubuntu-installer/amd64/boot-screens/txt.cfg.j2
@@ -5,7 +5,7 @@ default vesamenu.c32
 label {{ item.label }}
   menu label ^{{ item.menu_label }}
 {%     if item.menu_default is defined and item.menu_default %}
-  menu_default
+  menu default
 {%     endif %}
 {%     if item.localboot is defined and item.localboot %}
   localboot 0
