--- a/templates/var/lib/tftpboot/preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/preseed.cfg.j2
@@ -115,7 +115,7 @@ d-i partman/choose_partition select finish
 d-i partman/confirm_nooverwrite boolean true
 
 ### Account setup
-d-i passwd/root-login boolean true
+d-i passwd/root-login boolean false
 {% if (tftp_preseed_create_users is defined and not tftp_preseed_create_users) or tftp_preseed_create_users is not defined %}
 d-i passwd/make-user boolean false
 {% endif %}
@@ -145,7 +145,7 @@ d-i user-setup/allow-password-weak boolean true
 {% endif %}
 
 # Root password, either in clear text or encrypted...encrypted is default
-d-i passwd/root-password-crypted password {{ root_password }}
+#d-i passwd/root-password-crypted password {{ root_password }}
 
 # Set to true if you want to encrypt the first user's home directory.
 d-i user-setup/encrypt-home boolean false
