--- a/templates/var/lib/tftpboot/ubuntu_16.04_preseed.cfg.j2
+++ b/templates/var/lib/tftpboot/ubuntu_16.04_preseed.cfg.j2
@@ -54,7 +54,7 @@ d-i clock-setup/utc boolean true
 d-i time/zone string US/Eastern
 
 # Controls whether to use NTP to set the clock during the install
-d-i clock-setup/ntp boolean true
+d-i clock-setup/ntp boolean {{ tftp_preseed_ntp_sync|lower }}
 
 ### Partitioning
 d-i partman-auto/disk string {{ pre_seed_partition_disk }}
