--- a/templates/etc/apt-cacher-ng/security.conf.j2
+++ b/templates/etc/apt-cacher-ng/security.conf.j2
@@ -9,8 +9,8 @@
 # visit pages with administrative functionality. Format: username:password
 
 #AdminAuth: mooma:moopa
-{% if apt_cacher_ng_account is defined %}
-{%   for item in apt_cacher_ng_account %}
+{% if tftpserver_apt_cacher_ng_account is defined %}
+{%   for item in tftpserver_apt_cacher_ng_account %}
 AdminAuth: {{ item.name }}:{{ item.password }}
 {%   endfor %}
 {% endif %}
