--- a/templates/var/lib/tftpboot/KS/ESX_KS.CFG.j2
+++ b/templates/var/lib/tftpboot/KS/ESX_KS.CFG.j2
@@ -1,26 +1,25 @@
-# {{ ansible_managed }}
 # Sample scripted installation file
 
 # Accept the VMware End User License Agreement
 vmaccepteula
 
 # Set the root password for the DCUI and ESXi Shell
-{% if esxi_root_pw is defined %}
-{%   if (esxi_root_pw_encrypted is defined and not esxi_root_pw_encrypted) or esxi_root_pw_encrypted is not defined %}
-rootpw {{ esxi_root_pw }}
+{% if tftpserver_esxi_root_pw is defined %}
+{%   if (tftpserver_esxi_root_pw_encrypted is defined and not tftpserver_esxi_root_pw_encrypted) or tftpserver_esxi_root_pw_encrypted is not defined %}
+rootpw {{ tftpserver_esxi_root_pw }}
 {%   endif %}
-{%   if esxi_root_pw_encrypted is defined and esxi_root_pw_encrypted %}
-rootpw {{ esxi_root_pw }} --iscrypted
+{%   if tftpserver_esxi_root_pw_encrypted is defined and tftpserver_esxi_root_pw_encrypted %}
+rootpw {{ tftpserver_esxi_root_pw }} --iscrypted
 {%   endif %}
 {% endif %}
-{% if esxi_root_pw is not defined %}
+{% if tftpserver_esxi_root_pw is not defined %}
 rootpw vmware
 {% endif %}
 
 # Install on the first local disk available on machine
-{{ esxi_install_disk_options }}
-{% if esxi_global_network_options is defined and esxi_create_host_kickstart_configs is defined and not esxi_create_host_kickstart_configs %}
-{%   for item in esxi_global_network_options %}
+{{ tftpserver_esxi_install_disk_options }}
+{% if tftpserver_esxi_global_network_options is defined and tftpserver_esxi_create_host_kickstart_configs is defined and not tftpserver_esxi_create_host_kickstart_configs %}
+{%   for item in tftpserver_esxi_global_network_options %}
 {%     if item.create_default_portgroup %}
 # Set the network to DHCP on the first network adapater and create a portgroup for the VMs
 network --bootproto={{ item.bootproto }} --device={{ item.interface }} --addvmportgroup=1
@@ -31,9 +30,9 @@ network --bootproto={{ item.bootproto }} --device={{ item.interface }} --addvmpo
 {%     endif %}
 {%   endfor %}
 {% endif %}
-{% if esxi_create_host_kickstart_configs is defined and esxi_create_host_kickstart_configs %}
-{%   if esxi_hosts is defined %}
-{%     for host in esxi_hosts %}
+{% if tftpserver_esxi_create_host_kickstart_configs is defined and tftpserver_esxi_create_host_kickstart_configs %}
+{%   if tftpserver_esxi_hosts is defined %}
+{%     for host in tftpserver_esxi_hosts %}
 {%       if host.bootproto == "dhcp" %}
 {%         if not host.create_default_portgroup %}
 # Set the network to DHCP on the first network adapater and do not create a portgroup for the VMs
@@ -63,7 +62,7 @@ reboot
 
 %firstboot --interpreter=busybox
 
-{% if esxi_enable_ssh_and_shell is defined and esxi_enable_ssh_and_shell %}
+{% if tftpserver_esxi_enable_ssh_and_shell is defined and tftpserver_esxi_enable_ssh_and_shell %}
 # Enable SSH and the ESXi Shell
 vim-cmd hostsvc/enable_ssh
 vim-cmd hostsvc/start_ssh
@@ -74,8 +73,8 @@ vim-cmd hostsvc/start_esx_shell
 esxcli system settings advanced set -o /UserVars/SuppressShellWarning -i 1
 esxcli system settings advanced set -o /UserVars/ESXiShellTimeOut -i 1
 {% endif %}
-{% if esxi_enable_snmp is defined and esxi_enable_snmp %}
-{%   for item in esxi_snmp_options %}
+{% if tftpserver_esxi_enable_snmp is defined and tftpserver_esxi_enable_snmp %}
+{%   for item in tftpserver_esxi_snmp_options %}
 
 # Enable SNMP and configure SNMP
 esxcli system snmp set --communities {{ item.community }}
@@ -88,17 +87,17 @@ vim-cmd hostsvc/maintenance_mode_enter
 
 # rename local datastore
 #vim-cmd hostsvc/datastore/rename datastore1 "local-$(hostname -s)"
-{% if esxi_install_vibs is defined and esxi_install_vibs %}
+{% if tftpserver_esxi_install_vibs is defined and tftpserver_esxi_install_vibs %}
 
 # Install the following VIBS
-{%   for item in esxi_vibs %}
+{%   for item in tftpserver_esxi_vibs %}
 esxcli software vib install -v {{ item }}
 {%   endfor %}
 {% endif %}
-{% if esxi_enable_snmp is defined and esxi_enable_snmp %}
+{% if tftpserver_esxi_enable_snmp is defined and tftpserver_esxi_enable_snmp %}
 
 # Configure Firewall to allow SNMP
-{%   for item in esxi_snmp_options %}
+{%   for item in tftpserver_esxi_snmp_options %}
 esxcli network firewall ruleset set --ruleset-id snmp --allowed-all false
 esxcli network firewall ruleset allowedip add --ruleset-id snmp --ip-address {{ item.allowed_from }}
 esxcli network firewall ruleset set --ruleset-id snmp --enabled true
@@ -107,15 +106,15 @@ esxcli network firewall ruleset set --ruleset-id snmp --enabled true
 {% endif %}
 
 # Exit Maintenance Mode
-{% if esxi_exit_maint_mode is defined and esxi_exit_maint_mode %}
+{% if tftpserver_esxi_exit_maint_mode is defined and tftpserver_esxi_exit_maint_mode %}
 vim-cmd hostsvc/maintenance_mode_exit
 {% endif %}
-{% if esxi_addl_settings is defined %}
+{% if tftpserver_esxi_addl_settings is defined %}
 
 ##################################
 # Additional host configurations #
 ##################################
-{%   for item in esxi_addl_settings %}
+{%   for item in tftpserver_esxi_addl_settings %}
 # {{ item.desc }}
 {%     if item.command is defined %}
 {{ item.command }}
